# sns-sub-manager

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: constraints.txt  pre-release.yml  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt
src/sns_sub_manager/: __init__.py  config.py  main.py
src/sns_sub_manager/routes/: __init__.py  list.py  subscribe.py
src/sns_sub_manager/schemas/: subscribe.py
src/sns_sub_manager/utils/: aws.py  logging.py
tests/: __init__.py  test_main.py
